syntax = "proto3";
package dipstick.stack.v1;

import "dipstick/can/v1/service.proto";
import "dipstick/core/v1/entity.proto";
import "dipstick/gpio/v1/service.proto";
import "dipstick/shadow/v1/service.proto";
import "dipstick/spi/v1/service.proto";
import "dipstick/xcp/v1/service.proto";

message StackEntity {
  dipstick.core.v1.EntityMeta meta = 1;
  StackSpec spec = 2;
  StackStatus status = 3;
}

message StackStatus {}

message StackSpec {
  CanPackageSpec can = 8;
  DevicePackageSpec device = 6;
  GpioPackageSpec gpio = 4;
  ShadowPackageSpec shadow = 7;
  SpiPackageSpec spi = 3;
  XcpPackageSpec xcp = 5;
}

message CanPackageSpec {
  repeated dipstick.can.v1.CreateBusRequest bus = 1;
}

message DevicePackageSpec {
  // repeated dipstick.device.v1.Ina2xxSpec ina2xx = 1;
}

message GpioPackageSpec {
  repeated dipstick.gpio.v1.CreateChipRequest chip = 1;
}

message ShadowPackageSpec {
  repeated dipstick.shadow.v1.CreateShadowRequest shadow = 2;
}

message SpiPackageSpec {
  repeated dipstick.spi.v1.CreateDeviceRequest device = 1;
}

message XcpPackageSpec {
  repeated dipstick.xcp.v1.CreateA2lRequest a2l = 1;
  repeated dipstick.xcp.v1.CreateSessionRequest session = 2;
}
